fixed build with enable-preview